@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 dnl ------------------------------------------------------------
-dnl $Id: configure.in,v 1.148 2004/12/13 10:59:54 freddy77 Exp $
+dnl $Id: configure.in,v 1.149 2004/12/13 19:13:48 freddy77 Exp $
 dnl If you're trying to create a new configure test, try
 dnl
 dnl 	http://autogen.sourceforge.net/conftest.html
@@ -12,7 +12,7 @@ dnl ------------------------------------------------------------
 # ------------------------------------------------------------
 AC_INIT(src/dblib/dblib.c)
 AC_PREREQ(2.53)
-AC_REVISION($Revision: 1.148 $)
+AC_REVISION($Revision: 1.149 $)
 
 define(TDSDATE, esyscmd(echo -n $(date +"%Y%m%d")))
 AM_INIT_AUTOMAKE(freetds, 0.64.dev.TDSDATE)
@@ -124,7 +124,7 @@ AC_HEADER_TIME
 AC_CHECK_HEADERS([unistd.h errno.h wchar.h sys/time.h malloc.h sys/types.h \
 sys/socket.h arpa/inet.h netdb.h netinet/in.h netinet/tcp.h langinfo.h \
 paths.h sys/ioctl.h libgen.h sys/param.h locale.h odbcss.h sys/select.h \
-regex.h])
+regex.h readpassphrase.h signal.h])
 AC_HAVE_INADDR_NONE
 
 # ------------------------------------------------------------
@@ -277,7 +277,7 @@ AC_CHECK_FUNCS([inet_ntoa_r getipnodebyaddr getipnodebyname freehostent \
 getaddrinfo getnameinfo inet_ntop inet_pton \
 gethostname sethostent_r gethostent_r])
 LIBS="$OLD_LIBS"
-AC_REPLACE_FUNCS(asprintf vasprintf atoll strtok_r)
+AC_REPLACE_FUNCS(asprintf vasprintf atoll strtok_r readpassphrase)
 
 # ------------------------------------------------------------
 # Checks for library variables.
