@@ -1,3 +1,10 @@
+Mon Dec 13 20:12:25 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
+	* src/replacements/readpassphrase.c(added):
+	* src/replacements/readpassphrase.h(added):
+	- replacements for readpassphrase
+	* configure.in include/replacements.h src/apps/tsql.c:
+	- use readpassphrase instead of getpass
+
 Mon Dec 13 14:20:14 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/rpc.c: merged with trunk 0.63
 	* include/tds.h src/tds/util.c:
